Fine tuned elements styling

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+body{
+    background-color: #fdfdfd;
+    
+}
 .welcome{
     background-image: url(../images/backgrounds/h_img.jpg);
     background-position: center center;
@@ -8,8 +12,9 @@
    padding-bottom: 20%;    
 }
 
-h2{
+h2,h3,h4{
     text-align: center;
+    font-family: 'Roboto', sans-serif;
 }
 .about{
 text-align:center;
@@ -21,19 +26,10 @@ padding:40px 40px 40px 40px;
     background-size: cover;
     height:50vh;
 }
-.description{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    /*padding:100px;*/
-    height:100vh;
-}
-.portfolio{
-    align-items: center;
 
-}
 .row{
     padding-bottom: 20px;
+    text-align: center;
 }
 .info{
     background-image: url(../images/backgrounds/c_image.jpg);
@@ -44,8 +40,11 @@ padding:40px 40px 40px 40px;
 }
 form{
     color:white;
-    background: transparent !important;
-    margin-left: 30%;
+    margin: 20px;
+    text-align: left;
+}
+.form-control{
+    background-color: rgba(0, 0, 0, 0);;
 }
 
 #message{
@@ -59,7 +58,4 @@ form{
 padding:20px;
 display: flex;
 justify-content: center;
-}
-h4{
-text-align: center;
 }
